# modelo_cs

./: ComputerPlantProblem.lp  KitsProblem.lp  Problema.md  common.py  kits.py  loader.py  m.py  main.py  pyproject.toml  zone_generator.py
objects/: collection_center.json  kits.json  zone_centro_buga.json  zone_centro_tulua.json  zone_norte.json  zone_sur_occidente.json  zone_sur_occidente.text  zone_sur_oriente.json  zone_sur_oriente.text
objects/results/: kits_result.json
